--- a/IS403Project1/Views/Home/Contact.cshtml
+++ b/IS403Project1/Views/Home/Contact.cshtml
@@ -7,24 +7,30 @@
 <p>Phone Number: 555-555-5555</p>
 <p>FakeEmail@gmail.com</p>
 
-<br />
-<label>Full Name: </label>
-<input type="text" />
+<div>
+    <form>
+        <br />
+        <label>Full Name: </label>
+        <input type="text" />
 
-<br />
-<label>Email: </label>
-<input type="text" />
+        <br />
+        <label>Email: </label>
+        <input type="text" />
 
-<br />
-<label>Subject: </label>
-<select>
-    <option value="">Say Hello</option>
-    <option value="">Complain</option>
-    <option value="">Feedback</option>
-    <option value="">Rating</option>
-</select>
+        <br />
+        <label>Subject: </label>
+        <select>
+            <option value="">Say Hello</option>
+            <option value="">Complain</option>
+            <option value="">Feedback</option>
+            <option value="">Rating</option>
+        </select>
 
-<br />
-<label>Full Name: </label>
-<input type="text" />
+        <br />
+        <label>Message: </label>
+        <textarea></textarea>
 
+        <br />
+        <input type="submit" value="submit" />
+    </form>
+</div>
