mission select form

--- a/IS403Project1/Views/Missions/Index.cshtml
+++ b/IS403Project1/Views/Missions/Index.cshtml
@@ -7,10 +7,10 @@
 
 <form action="DisplayMission" method="post">
     <label>Select a mission:</label>
-    <select>
-        <option value="RussiaMoscow">Russia Moscow</option>
-        <option value="BrazilBrasilia">Brazil Brasilia</option>
-        <option value="CanadaHalifax">Canada Halifax</option>
+    <select name="id">
+        <option value="1">Russia Moscow</option>
+        <option value="2">Brazil Brasilia</option>
+        <option value="3">Canada Halifax</option>
     </select>
     <input type="submit" value="Go" />
 </form>
