--- a/IS403Project1/Views/Missions/DisplayMission.cshtml
+++ b/IS403Project1/Views/Missions/DisplayMission.cshtml
@@ -68,6 +68,24 @@
 
     </dl>
 </div>
+
+<br />
+@ViewBag.Question1
+<br />
+<br />
+@ViewBag.Question2
+<br />
+<br />
+@ViewBag.Question3
+<br />
+<br />
+@ViewBag.Question4
+<br />
+<br />
+@ViewBag.Question5
+<br />
+<br />
+
 <p>
     @Html.ActionLink("Back to Mission Selection", "Index")
 </p>
