--- a/IS403Project1/Views/Missions/DisplayMission.cshtml
+++ b/IS403Project1/Views/Missions/DisplayMission.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "DisplayMission";
 }
-
+<script src="~/Scripts/myJS.js"></script>
 <h2>DisplayMission</h2>
 
 <div>
@@ -69,22 +69,22 @@
     </dl>
 </div>
 
-<br />
-@ViewBag.Question1
-<br />
-<br />
-@ViewBag.Question2
-<br />
-<br />
-@ViewBag.Question3
-<br />
-<br />
-@ViewBag.Question4
-<br />
-<br />
-@ViewBag.Question5
-<br />
-<br />
+<div>
+    <span id="question1">@ViewBag.Question1</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('1')" id="btn1" value="Reply" />
+    <div id="output1"></div>
+    <br />
+    <span id="question2">@ViewBag.Question2</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('2')" id="btn2" value="Reply" />
+    <div id="output2"></div>
+    <br />
+    <span id="question3">@ViewBag.Question3</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('3')" id="btn3" value="Reply" />
+    <div id="output3"></div>
+    <br />
+    <span id="question4">@ViewBag.Question4</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('4')" id="btn4" value="Reply" />
+    <div id="output4"></div>
+    <br />
+    <span id="question5">@ViewBag.Question5</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('5')" id="btn5" value="Reply" />
+    <div id="output5"></div>
+</div>
 
 <p>
     @Html.ActionLink("Back to Mission Selection", "Index")
