--- a/IS403Project1/Views/Missions/Index.cshtml
+++ b/IS403Project1/Views/Missions/Index.cshtml
@@ -5,8 +5,7 @@
 
 <h2>Missions</h2>
 
-@using (Html.BeginForm("DisplayMission", "Missions", FormMethod.Post))
-{
+<form action="Missions/DisplayMission" method="post">
     <label>Select a mission:</label>
     <select name="id">
         <option value="1">Russia Moscow</option>
