--- a/IS403Project1/Views/Home/About.cshtml
+++ b/IS403Project1/Views/Home/About.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "About";
 }
 
+<div class="hero">
+    <img />
+</div>
+
 <h2>About</h2>
 
 <p>Our vision is to connect returned missionaries to new missionaries who will be having similar experiences.</p>
