Home Page Styling

--- a/IS403Project1/Views/Home/Index.cshtml
+++ b/IS403Project1/Views/Home/Index.cshtml
@@ -3,7 +3,22 @@
     ViewBag.Title = "Index";
 }
 
-<div class="jumbotron">
+<br />
+<br />
 
+<div class="jumbotron jumbotron-fluid" style="background-color: #2F4860">
+
+    <center><h1 style="color: aliceblue">Called To Serve</h1>
+    <p class="lead" style="color: aliceblue">Mission Questions for Prospective Missionaries</p>
+
+        <div class="container">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more about Missions</a>
+        </div>
+    </center>
 </div>
 
+<div>
+    <center>
+        <iframe width="728" height="410" src="https://www.youtube.com/embed/G3UmBVn8IXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
+</div>
