--- a/IS403Project1/Content/bootstrap.css
+++ b/IS403Project1/Content/bootstrap.css
@@ -62,6 +62,7 @@ a:hover {
 h1 {
   margin: 0.67em 0;
   font-size: 2em;
+  text-align: center
 }
 
 abbr[title] {
@@ -4917,16 +4918,16 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
-  font-size: 21px;
-  font-weight: 200;
-  line-height: 2.1428571435;
-  color: inherit;
-  background-color: #eeeeee;
+    padding: 30px;
+    margin-bottom: 30px;
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 2.1428571435;
+    color: inherit;
+    background-color: #999;
 }
 
-.jumbotron h1 {
+h1 {
   line-height: 1;
   color: inherit;
 }
