--- a/IS403Project1/Views/Missions/Index.cshtml
+++ b/IS403Project1/Views/Missions/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Missions</h2>
 
-<form action="DisplayMission" method="post">
+<form action="/Missions/DisplayMission" method="post">
     <label>Select a mission:</label>
     <select name="id">
         <option value="1">Russia Moscow</option>
