--- a/IS403Project1/Views/Home/About.cshtml
+++ b/IS403Project1/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="hero">
-    <img />
+    <img src="~/Content/Images/sebastiano-piazzi-tI_DEyjWOkY-unsplash.jpg" />
 </div>
 
 <h2>About</h2>
