--- a/IS403Project1/Views/Missions/Index.cshtml
+++ b/IS403Project1/Views/Missions/Index.cshtml
@@ -10,5 +10,5 @@
         <option value="2">Brazil Brasilia</option>
         <option value="3">Canada Halifax</option>
     </select>
-    <input type="submit" value="Go" />
+    <input class="btn btn-primary btn-sm" type="submit"  value="Go" />
 }
