--- a/IS403Project1/Views/Missions/DisplayMission.cshtml
+++ b/IS403Project1/Views/Missions/DisplayMission.cshtml
@@ -71,19 +71,19 @@
 
 <div>
     <h3>Frequently Asked Questions</h3>
-    <span id="question1">@ViewBag.Question1</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('1')" id="btn1" value="Reply" />
+    <span id="question1">@ViewBag.Question1</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-primary btn-sm" onclick="response('1')" id="btn1" value="Reply" />
     <div id="output1"></div>
     <br />
-    <span id="question2">@ViewBag.Question2</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('2')" id="btn2" value="Reply" />
+    <span id="question2">@ViewBag.Question2</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-primary btn-sm" onclick="response('2')" id="btn2" value="Reply" />
     <div id="output2"></div>
     <br />
-    <span id="question3">@ViewBag.Question3</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('3')" id="btn3" value="Reply" />
+    <span id="question3">@ViewBag.Question3</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-primary btn-sm" onclick="response('3')" id="btn3" value="Reply" />
     <div id="output3"></div>
     <br />
-    <span id="question4">@ViewBag.Question4</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('4')" id="btn4" value="Reply" />
+    <span id="question4">@ViewBag.Question4</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-primary btn-sm" onclick="response('4')" id="btn4" value="Reply" />
     <div id="output4"></div>
     <br />
-    <span id="question5">@ViewBag.Question5</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" onclick="response('5')" id="btn5" value="Reply" />
+    <span id="question5">@ViewBag.Question5</span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-primary btn-sm" onclick="response('5')" id="btn5" value="Reply" />
     <div id="output5"></div>
 </div>
 
@@ -92,7 +92,7 @@
     <form>
         <textarea rows="4" cols="50" placeholder="Ask a question here..."></textarea>
         <br />
-        <input type="submit" value="Submit" />
+        <input class="btn btn-primary btn-sm" type="submit" value="Submit" />
     </form>
 </div>
 <br />
