hero image About

--- a/IS403Project1/Views/Home/About.cshtml
+++ b/IS403Project1/Views/Home/About.cshtml
@@ -4,7 +4,10 @@
 }
 
 <div class="hero">
-    <img src="~/Content/Images/sebastiano-piazzi-tI_DEyjWOkY-unsplash.jpg" />
+    <img src="~/Content/Images/hero-1600px.jpg" width=100% />
+    <div>
+        <h1>About</h1>
+    </div>
 </div>
 
 <h2>About</h2>
