--- a/IS403Project1/Views/Home/About.cshtml
+++ b/IS403Project1/Views/Home/About.cshtml
@@ -4,13 +4,31 @@
 }
 
 <div class="hero">
-    <img src="~/Content/Images/hero-1600px.jpg" width=100% />
+    <img src="~/Content/Images/hero-1600px-small.jpg" width=100% />
     <div>
         <h1>About</h1>
     </div>
 </div>
 
-<h2>About</h2>
+<br />
 
 <p>Our vision is to connect returned missionaries to new missionaries who will be having similar experiences.</p>
 
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore magna aliqua. Ultricies leo integer malesuada nunc vel risus. Risus quis varius
+    quam quisque id diam. Mauris a diam maecenas sed. Mattis enim ut tellus elementum. Praesent
+    tristique magna sit amet purus gravida quis blandit. Egestas diam in arcu cursus euismod quis
+    viverra. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Id venenatis a condimentum
+    vitae sapien pellentesque habitant. Sit amet mauris commodo quis imperdiet massa. Sagittis vitae
+    et leo duis ut.</p>
+
+<p>
+    Viverra nam libero justo laoreet sit amet cursus sit amet. Ut faucibus pulvinar elementum integer
+    enim neque volutpat ac. Urna id volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur
+    purus ut faucibus pulvinar elementum. Tristique magna sit amet purus gravida quis. Erat imperdiet
+    sed euismod nisi porta. Fermentum odio eu feugiat pretium nibh. Urna porttitor rhoncus dolor purus
+    non enim praesent elementum facilisis. Eget nunc lobortis mattis aliquam faucibus purus in massa
+    tempor. Gravida in fermentum et sollicitudin ac orci. Velit dignissim sodales ut eu sem. Pretium 
+    lectus quam id leo in vitae. Urna nec tincidunt praesent semper feugiat nibh sed.
+</p>
