--- a/IS403Project1/Views/Missions/DisplayMission.cshtml
+++ b/IS403Project1/Views/Missions/DisplayMission.cshtml
@@ -59,11 +59,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FlagURL)
+            @Html.DisplayNameFor(model => model.Flag)
         </dt>
 
         <dd>
-            <img src="@Html.DisplayFor(model => model.FlagURL)" alt="Alternate Text" />
+            <img src="@Html.DisplayFor(model => model.Flag)" alt="Alternate Text" />
         </dd>
 
     </dl>
