--- a/IS403Project1/Views/Shared/_Layout.cshtml
+++ b/IS403Project1/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer style="float: left">
             <p>&copy; @DateTime.Now.Year - Called To Serve</p>
         </footer>
     </div>
