--- a/IS403Project1/Views/Home/About.cshtml
+++ b/IS403Project1/Views/Home/About.cshtml
@@ -15,20 +15,21 @@
 <p>Our vision is to connect returned missionaries to new missionaries who will be having similar experiences.</p>
 
 <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-    labore et dolore magna aliqua. Ultricies leo integer malesuada nunc vel risus. Risus quis varius
-    quam quisque id diam. Mauris a diam maecenas sed. Mattis enim ut tellus elementum. Praesent
-    tristique magna sit amet purus gravida quis blandit. Egestas diam in arcu cursus euismod quis
-    viverra. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Id venenatis a condimentum
-    vitae sapien pellentesque habitant. Sit amet mauris commodo quis imperdiet massa. Sagittis vitae
-    et leo duis ut.</p>
+    Recommendation papers for full-time service may be submitted to Church headquarters by a prospective
+    missionary’s stake president 120 days prior to his or her availability date. Availability date is the
+    earliest date at which the prospective missionary is available to begin his or her mission. The earliest
+    date young men may enter the MTC is after graduating from high school or its equivalent and reaching 18
+    years of age. The earliest date women may enter the MTC is after their 19th birthday. Other influences
+    on one's availability date may include completing a university semester, finishing an employment
+    commitment, or stabilizing a medical condition. Speak with your priesthood leaders well before the 120
+    day submission window to start the recommendation process and to confirm your availability date.
+</p>
 
 <p>
-    Viverra nam libero justo laoreet sit amet cursus sit amet. Ut faucibus pulvinar elementum integer
-    enim neque volutpat ac. Urna id volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur
-    purus ut faucibus pulvinar elementum. Tristique magna sit amet purus gravida quis. Erat imperdiet
-    sed euismod nisi porta. Fermentum odio eu feugiat pretium nibh. Urna porttitor rhoncus dolor purus
-    non enim praesent elementum facilisis. Eget nunc lobortis mattis aliquam faucibus purus in massa
-    tempor. Gravida in fermentum et sollicitudin ac orci. Velit dignissim sodales ut eu sem. Pretium 
-    lectus quam id leo in vitae. Urna nec tincidunt praesent semper feugiat nibh sed.
+    The First Presidency has stated: “There are worthy individuals who desire to serve but do not qualify
+    for the physical, mental, or emotional challenges of a mission. We ask stake presidents and bishops to
+    express love and appreciation to these individuals and to honorably excuse them from full-time missionary
+    labors.” In such cases, service missions can be a great blessing, allowing you to live at home and
+    receive appropriate medical care while growing and maturing in the service of the Lord. Talk to your 
+    bishop or branch president for more information on Church service missions.
 </p>
