commit final aarons

--- a/IS403Project1/Views/Home/Index.cshtml
+++ b/IS403Project1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <br />
 <br />
 
-<div class="jumbotron jumbotron-fluid" style="background-color: #2F4860">
+<div class="jumbotron jumbotron-fluid" style="background-color: black">
 
     <center><h1 style="color: aliceblue">Called To Serve</h1>
     <p class="lead" style="color: aliceblue">Mission Questions for Prospective Missionaries</p>
