--- a/IS403Project1/Views/Home/Contact.cshtml
+++ b/IS403Project1/Views/Home/Contact.cshtml
@@ -4,19 +4,28 @@
 }
 
 <h2>Contact</h2>
+
+<br />
+<img src="~/Content/Images/missionaries.jpg" width="30%" />
+<br />
+<br />
+
 <p>Phone Number: 555-555-5555</p>
-<p>FakeEmail@gmail.com</p>
+<p>Email: example@gmail.com</p>
 
 <div>
+    <h3>Send us a message:</h3>
     <form>
         <br />
         <label>Full Name: </label>
         <input type="text" />
 
         <br />
+        <br />
         <label>Email: </label>
         <input type="text" />
 
+        <br />
         <br />
         <label>Subject: </label>
         <select>
@@ -27,10 +36,12 @@
         </select>
 
         <br />
+        <br />
         <label>Message: </label>
         <textarea></textarea>
 
         <br />
-        <input type="submit" value="submit" />
+        <br />
+        <input type="submit" value="Submit" />
     </form>
 </div>
