--- a/IS403Project1/Views/Home/Contact.cshtml
+++ b/IS403Project1/Views/Home/Contact.cshtml
@@ -31,6 +31,6 @@
         <textarea></textarea>
 
         <br />
-        <input type="submit" value="submit" />
+        <input type="submit" class="btn btn-primary btn-lg" value="submit" />
     </form>
 </div>
