--- a/IS403Project1/Views/Home/Contact.cshtml
+++ b/IS403Project1/Views/Home/Contact.cshtml
@@ -42,6 +42,6 @@
 
         <br />
         <br />
-        <input type="submit" value="Submit" />
+        <input type="submit" class="btn btn-primary btn-lg" value="submit" />
     </form>
 </div>
