--- a/IS403Project1/Views/Missions/Index.cshtml
+++ b/IS403Project1/Views/Missions/Index.cshtml
@@ -1,27 +1,18 @@
-﻿@{
+﻿@model IEnumerable<MissionProject.Models.Mission>
+
+@{
     ViewBag.Title = "Index";
 }
 
-<div style="height:540px; background-image: url('../../Content/Images/mapOfTheWorld.png');">
-    <center>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <div style="background-color:black; padding:50px; border-radius:25px; width:40%">
-            <h2 style="color:white">Missions</h2>
-            @using (Html.BeginForm("DisplayMission", "Missions", FormMethod.Post))
-            {
-                <label style="color:white">Select a mission:</label>
-                <select name="id">
-                    <option value="1">Russia Moscow</option>
-                    <option value="2">Brazil Brasilia</option>
-                    <option value="3">Canada Halifax</option>
-                </select>
-                <input class="btn btn-primary btn-sm" type="submit" value="Go" />
-            }
+<h2>Index</h2>
+@using (Html.BeginForm())
+{
+    @Html.DropDownList("Select Mission", new SelectList(Model, "MissionID", "MissionName"))
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Select" class="btn btn-default" />
         </div>
-    </center>
-    
-</div>
+    </div>
+}
+
+
